kubernetes/apps/workers/cpu-worker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpu-worker
  namespace: workers
  labels:
    app: cpu-worker
    team: platform
    environment: lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpu-worker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: cpu-worker
        team: platform
        environment: lab
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: cpu-worker
                topologyKey: kubernetes.io/hostname
      priorityClassName: batch-low
      containers:
        - name: cpu-worker
          image: ghcr.io/gefmoura0601-bot/cpu-worker-go:0767f1b
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 128Mi
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: cpu-worker
